asdbhasd guayshdkjas dufavyshkdjmasd

--- a/index.html
+++ b/index.html
@@ -1,9 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Editorial by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>Gliese Art Collective</title>
@@ -60,27 +55,27 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
+											<a href="library.html" class="image"><img src="https://imgur.com/a/ZXtYzDC" alt="" /></a>
 											<h3>Library</h3>
 											<p>The resting place of our own resources.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">See</a></li>
+												<li><a href="library.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+											<a href="mission.html" class="image"><img src="https://imgur.com/a/ezy1HXY" alt="" /></a>
 											<h3>Mission</h3>
 											<p>An explanation of our hopes as a collective.</p>
 											<ul class="actions">
-												<li><a href="#" class="button">See</a></li>
+												<li><a href="mission.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+											<a href="resources.html" class="image"><img src="https://imgur.com/a/ZsYIwvB" alt="" /></a>
 											<h3>Other resources</h3>
 											<p>Good places to think long thoughts about beautiful art. </p>
 											<ul class="actions">
-												<li><a href="#" class="button">See</a></li>
+												<li><a href="resources.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
