--- a/index.html
+++ b/index.html
@@ -55,33 +55,33 @@
 									</header>
 									<div class="posts">
 										<article>
-											<a href="library.html" class="image"><img src="https://imgur.com/a/ZXtYzDC" alt="" /></a>
-											<h3>Library</h3>
-											<p>The resting place of our own resources.</p>
+											<a href="library.html" class="image"><img src="https://i.ibb.co/jZbB9cZ/image-2023-07-02-204816074.png" alt="" /></a>
+											<h2>library</h2>
+											<p style="margin:10px;">The resting place of our own resources.</p>										<p style="font-size: 90%"><em>art: grapes, ai weiwei</em></p>
 											<ul class="actions">
 												<li><a href="library.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="mission.html" class="image"><img src="https://imgur.com/a/ezy1HXY" alt="" /></a>
-											<h3>Mission</h3>
-											<p>An explanation of our hopes as a collective.</p>
+											<a href="mission.html" class="image"><img src="https://i.ibb.co/cCFWx12/image-2023-07-02-204940536.png" alt="" /></a>
+											<h2>Mission</h2>
+											<p style="margin:10px;">An explanation of our hopes as a collective.</p>										<p style="font-size: 90%"><em>art: such dinner time, kyungah ham</em></p>
 											<ul class="actions">
 												<li><a href="mission.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="resources.html" class="image"><img src="https://imgur.com/a/ZsYIwvB" alt="" /></a>
-											<h3>Other resources</h3>
-											<p>Good places to think long thoughts about beautiful art. </p>
-											<ul class="actions">
+											<a href="resources.html" class="image"><img src="https://i.ibb.co/4gShTJZ/image-2023-07-02-210017648.png" alt="" /></a>
+											<h2>Other resources</h2>
+											<p style="margin:10px;">Good places to think long thoughts about art.</p>										<p style="font-size: 90%"><em>art: needling whisper, needle country, kyungah ham</em></p>
+				<ul class="actions">
 												<li><a href="resources.html" class="button">See</a></li>
 											</ul>
 										</article>
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3>Our staff</h3>
-											<p>Who we are as individuals.</p>
+											<a href="#" class="image"><img src="https://i.ibb.co/QJJWGJJ/image-2023-07-02-205226144.png" alt="" /></a>
+											<h2>Our staff</h2>
+											<p style="margin:10px;">Who we are as individuals.</p>										<p style="font-size: 90%"><em>art: with wind, ai weiwei</em></p>
 											<ul class="actions">
 												<li><a href="#" class="button">See</a></li>
 											</ul>
@@ -94,8 +94,8 @@
 					</div>
 
 				<!-- Sidebar -->
-					<div id="sidebar">
-						<div class="inner">
+					<div id="sidebar" style="font-family: Inconsolata">
+						<div class="inner" style="font-family: Inconsolata">
 
 							<!-- Search -->
 								<section id="search" class="alt">
@@ -109,58 +109,28 @@
 									<header class="major">
 										<h2>Menu</h2>
 									</header>
-									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="generic.html">Generic</a></li>
-										<li><a href="elements.html">Elements</a></li>
-										<li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
+									<ul style="font-family: Inconsolata">
+										<li><a href="index.html" >Home</a></li>
+										<li><a href="library.html">Library</a></li>
+										<li><a href="staff.html">Staff</a></li>
+												<li><a href="mission.html">Mission</a></li>
+												<li><a href="resources.html">Resources</a></li>
 											</ul>
-										</li>
-										<li><a href="#">Etiam Dolore</a></li>
-										<li><a href="#">Adipiscing</a></li>
-										<li>
-											<span class="opener">Another Submenu</span>
+										
 											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li>
-										<li><a href="#">Maximus Erat</a></li>
-										<li><a href="#">Sapien Mauris</a></li>
-										<li><a href="#">Amet Lacinia</a></li>
-									</ul>
 								</nav>
 
 							<!-- Section -->
 								<section>
 									<header class="major">
-										<h2>Ante interdum</h2>
+										<h2>Features</h2>
 									</header>
 									<div class="mini-posts">
 										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic08.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic09.jpg" alt="" /></a>
-											<p>Aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore aliquam.</p>
+											<a href="#" class="image"><img src="https://i.ibb.co/SQ34RCm/image-2023-07-02-210433088.png" alt="" /></a>
+											<p>A cool piece of art I found while working on the site. It's <a href="https://artsandculture.google.com/asset/codes-of-conduct-amani-althuwaini/GgGkpM4Czfit-Q"><em>Codes of Conduct</em> by Amani Althuwaini in 2017</a>, about dowry gifting in Kuwait.</p>
 										</article>
 									</div>
-									<ul class="actions">
-										<li><a href="#" class="button">More</a></li>
-									</ul>
 								</section>
 
 							<!-- Section -->
@@ -168,12 +138,12 @@
 									<header class="major">
 										<h2>Get in touch</h2>
 									</header>
-									<p>Sed varius enim lorem ullamcorper dolore aliquam aenean ornare velit lacus, ac varius enim lorem ullamcorper dolore. Proin sed aliquam facilisis ante interdum. Sed nulla amet lorem feugiat tempus aliquam.</p>
+									<p>If you have any questions, we would love to hear from you!</p>
 									<ul class="contact">
-										<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-										<li class="icon solid fa-phone">(000) 000-0000</li>
-										<li class="icon solid fa-home">1234 Somewhere Road #8254<br />
-										Nashville, TN 00000-0000</li>
+										<li class="icon solid fa-envelope"><a href="mailto:gliese.artcollective@gmail.com">gliese.artcollective@gmail.com</a></li>
+										<li class="icon solid fa-phone">(703) 215-5587</li>
+										<li class="icon solid fa-home">Various addresses in northern Virginia<br />
+										</li>
 									</ul>
 								</section>
 
@@ -193,10 +163,9 @@
 
 			<div class="footer-right">
 
-				<a href="#"><i class="fa fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-twitter"></i></a>
-				<a href="#"><i class="fa fa-linkedin"></i></a>
-				<a href="#"><i class="fa fa-github"></i></a>
+				<a href="https://www.facebook.com/glieseartcollective/"><i class="fa fa-facebook"></i></a>
+				<a href="https://github.com/glieseartcollective"><i class="fa fa-github"></i></a>
+				<a href="https://instagram.com/gliese.artcollective"><i class="fa fa-instagram"></i></a>
 
 			</div>
 
@@ -212,6 +181,11 @@
 			</div>
 
 		</footer>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
